--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,14 +14,13 @@
     <header>
         <div class="header">
             <div class="txt-header">
-               <a class="link-home-page" href="{{ post.get_initial_url }}"><h4>Codelândia Blog</h4></a>
+               <a class="link-home-page" href="#"><h4>Codelândia Blog</h4></a>
                <div class="novo-post">
                     <h4>Menu</h4></a>
                 </div>
             </div>
             <div class="container-busca">
                 <input type="search" placeholder="Pesquisar no blog" name="busca" id="box-busca">
-                <img class="img-lupa" src="{% static 'imagens/lupa.png' %}" alt="">
             </div>
         </div>
     </header>
