--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,18 +42,6 @@ body {
     margin-top: 3em;
 }
 
-.img-lupa {
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    z-index: auto;
-    left: 14.5%;
-    padding: 12px;
-    cursor: pointer;
-    /* margin-top: 12px;
-    float: left; */
-}
-
 #box-busca {
     width: 100%;
     height: 3em;
@@ -180,23 +168,12 @@ body {
     padding-bottom: 20px;
 }
 
-.btn-proxima-pagina {
+.paginacao {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     width: 70%;
     margin: 0 auto;
-}
-
-.proxima-pagina {
-    font-size: 18px;
-    margin-bottom: 12px;
-    margin-top: 12px;
-    color: #052b41;
-}
-
-.img-seta {
-    width: 25px;
-    display: none;
+    color: #574aeb;
 }
 
 .rodape {
